# liorich

./: README.md
C# - Fullstack (Radio Link Quality)/Tak/: Program.cs  TaksherSOI.sln
C# - Fullstack (Radio Link Quality)/Tak/Models/: ChatHub.cs  (+1 more)
C,C++ - Sockets, OOP/Multicast Radio Project/: GLRPServer.c
C,C++ - Sockets, OOP/School Data management/: AdministrationPersonal.cpp  AdministrationPersonal.h  Class.cpp  Class.h  Layer.cpp  Layer.h  Main.cpp  Manager.cpp  Manager.h  Person.cpp  Person.h  Pupil.cpp  Pupil.h  School.cpp  School.h  Secretary.cpp  Secretary.h  Teacher.cpp  Teacher.h  Tutor.cpp  Tutor.h  VecAnalyser.cpp  VecAnalyser.h  Worker.cpp  Worker.h
C,C++ - Sockets, OOP/Select Server Project/: ReadMe.txt  Select_server.c  TCP_sender.c  UDP_sender.c  makefile
My C C++ Codes/Multicast Radio Project/: GLRPClient.c  ReadMe.txt  makefile
My C C++ Codes/School Data management/: AdministrationPersonal.cpp  AdministrationPersonal.h  CMakeLists.txt  Class.cpp  Class.h  Layer.cpp  Layer.h  Manager.cpp  Manager.h  Person.cpp  Person.h  Pupil.cpp  Pupil.h  School.cpp  School.h  Secretary.cpp  Secretary.h  Teacher.cpp  Teacher.h  Tutor.cpp  Tutor.h  VecAnalyser.cpp  VecAnalyser.h  Worker.cpp  Worker.h
My C C++ Codes/Select Server Project/: ReadMe.txt  TCP_receiver.c  UDP_receiver.c  chat_client_b.c  chat_server_b.c  makefile
My Python Codes/ConwayGameOfLife/: main.py
My Python Codes/MachineLearning - Gaussian Mixture Model/: GMM.py
My Python Codes/MachineLearning - Linear Regression/: LinearRegression.py
My Python Codes/Portfolios/: Portfolios.py
(+50 files in other folders)
