cmake_minimum_required(VERSION 3.17)
project(CPlus3)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPlus3 a3.cpp Person.h Person.cpp Pupil.h Pupil.cpp Worker.h Worker.cpp Teacher.h Teacher.cpp Tutor.h Class.h Secretary.h Tutor.cpp AdministrationPersonal.h AdministrationPersonal.cpp Secretary.cpp Class.cpp Manager.h Manager.cpp Layer.h Layer.cpp School.h School.cpp "VecAnalyser.h" VecAnalyser.cpp)